--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
 body {
-    font-family: "Helvetica Neue", "Roboto", "Verdana", "Tahoma", sans-serif;
+    font-family: "Roboto",sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    background-color: #FFFFFF;
 }
 
 a {
@@ -18,13 +19,15 @@ ol {
 
 /* ================= HEADER ================= */
 .header-logo {
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4D5AE5;
-}.header-logo .logo {
+}
+.header-logo .logo {
     color: #2E2F42;
 }
 .nav-link {
@@ -35,15 +38,15 @@ ol {
     color: #2E2F42;
 }
 
-.nav-link:hover {
-    color: #404BBF;
-}
-
-.nav-link:active {
+.nav-link:hover, 
+.nav-link:active,
+.nav-link:focus {
     color: #404BBF;
     text-decoration: underline;
 }
-
+.contacts {
+    font-style: normal;
+}
 .contacts-link {
     font-weight: 400;
     font-size: 16px;
@@ -52,7 +55,8 @@ ol {
     color: #434455;
 }
 
-.contacts-link:hover {
+.contacts-link:hover,
+.contacts-link:focus, {
     color: #404BBF;
 }
 
@@ -63,31 +67,29 @@ h1 {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    text-align: center;
     color: white;
     background-color: #2E2F42;
 }
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
-}
+    margin: -1px;
 .main-button {
-    font-family: inherit;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.04em;
+    cursor: pointer;
     color: #FFFFFF;
     background-color: #4D5AE5;
 }
 
-.main-button:hover {
+.main-button:hover,
+.main-button:focus, {
     background-color: #404BBF;
 }
 .main {
@@ -97,26 +99,28 @@ h1 {
 h2 {
     font-weight: 700;
     font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    text-transform: capitalize;
     letter-spacing: 0.02em;
     color: #2E2F42;
 }
 h3 {
     font-weight: 500;
     font-size: 20px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
 }
-.benefits-subtitle h3 {
-
-}
-.team{
+.team {
     background-color: #F4F4FD;
 }
 /* ================= FOOTER ================= */
 .footer-logo {
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4D5AE5;
