--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ ol {
     text-transform: uppercase;
     color: #4D5AE5;
 }
-.header-logo .logo {
+.header-logo .logo-first {
     color: #2E2F42;
 }
 .nav-link {
@@ -56,8 +56,8 @@ ol {
 }
 
 .contacts-link:hover,
-.contacts-link:focus, {
-    color: #404BBF;
+.contacts-link:focus {
+    color: #404bbf;
 }
 
 /* ================= MAIN ================= */
@@ -72,11 +72,14 @@ h1 {
     background-color: #2E2F42;
 }
 .visually-hidden {
+    position: absolute;
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
+    padding: 0;
     border: 0;
     margin: -1px;
+}
 .main-button {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -125,7 +128,7 @@ h3 {
     text-transform: uppercase;
     color: #4D5AE5;
 }
-.footer-logo .logo {
+.footer-logo .logo-second {
     color: #F4F4FD;
 }
 .footer-text {
