--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ h3 {
     background-color: #F4F4FD;
 }
 .portfolio-item {
-background-color: #FFFFFF
+background-color: #FFFFFF;
 }
 /* ================= FOOTER ================= */
 .footer-logo {
