--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ h3 {
 .team {
     background-color: #F4F4FD;
 }
-.portfolio-item {
+.portfolio {
 background-color: #FFFFFF;
 }
 /* ================= FOOTER ================= */
