--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,7 @@ h2 {
     text-transform: capitalize;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    background-color: #FFFFFF;
 }
 h3 {
     font-weight: 500;
@@ -120,7 +121,7 @@ h3 {
 .portfolio {
 background-color: #FFFFFF;
 }
-.portfolio-item {
+.portfolio-list {
     background-color: #FFFFFF;
 }
 /* ================= FOOTER ================= */
