--- a/css/styles.css
+++ b/css/styles.css
@@ -105,8 +105,7 @@ h2 {
     text-align: center;
     text-transform: capitalize;
     letter-spacing: 0.02em;
-    color: #2E2F42;
-    background-color: #FFFFFF;
+    color: #2E2F42; 
 }
 h3 {
     font-weight: 500;
@@ -114,15 +113,13 @@ h3 {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    background-color: #ffffff
 }
 .team {
     background-color: #F4F4FD;
 }
-.portfolio {
-background-color: #FFFFFF;
-}
-.portfolio-list {
-    background-color: #FFFFFF;
+.team-position {
+    background-color: #ffffff;
 }
 /* ================= FOOTER ================= */
 .footer-logo {
